--- a/.github/workflows/issue842.yml
+++ b/.github/workflows/issue842.yml
@@ -90,7 +90,7 @@ jobs:
           java-version: '17'
           server-id: github
           server-username: ${{ github.actor }}
-          server-password: abc
+          server-password: ${{ secrets.CUSTOME_TOKEN }}
 
       - name: Create directory structure
         run: |
