--- a/.github/workflows/issue842.yml
+++ b/.github/workflows/issue842.yml
@@ -44,7 +44,7 @@ jobs:
   #     - name: Release go pkg
   #       uses: go-semantic-release/action@v1
   #       with:
-  #         github-token: ${{ secrets.GITHUB_TOKEN }}
+  #         github-token: ${{ secrets.TOKEN_GITHUB}}
 
   generate-java-client:
     runs-on: ubuntu-latest
