--- a/.github/workflows/issue842.yml
+++ b/.github/workflows/issue842.yml
@@ -96,7 +96,7 @@ jobs:
               <server>
                 <id>github</id>
                 <username>${{ github.actor }}</username>
-                <password>${{ secrets.PUBLISHER_TOKEN }}</password>
+                <password>${{ secrets.TOKEN_GITHUB}}</password>
               </server>
             </servers>
           </settings>
@@ -108,7 +108,7 @@ jobs:
           java-version: '17'
           server-id: github
           server-username: ${{ github.actor }}
-          server-password: abc
+          server-password: ${{ secrets.TOKEN_GITHUB }}
           overwrite-settings: false
 
       - name: Create directory structure
