--- a/.github/workflows/issue842.yml
+++ b/.github/workflows/issue842.yml
@@ -154,4 +154,4 @@ jobs:
           mvn clean install
           mvn deploy -DskipTests -e -X
         env:
-          GITHUB_TOKEN: ${{ secrets.TEST_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
